# chess-bot

./: docker_nvidia_exporter.sh  install_grafana.sh  install_node_exporter.sh  install_promethius.sh  nn.py  pyproject.toml  self_play.py  test.py  todo.txt
.github/: copilot-instructions.md
src/: board_encoder.py  board_encoding.py  custom_board.py  inference_server.py  main.py  mcts.py  move_encoding.py  nn.py  self_play.py  thread_manager.py  training.py
src2/: inference_server.py  self_play.py  types.py
src2/agents/chess/: stockfish_agent.py
src2/agents/chess/mcts/: mcts_chess_agent.py
src2/environments/: chess_environment.py
src2/model/: inference_server.py
src2/model/chess_resnet/: board_encoding.py  evaluate_chess_board_and_history.py  nn.py
src2/model/resnet/: evaluate.py  move_translation.py  nn.py
src2/policy/mcts/: mcts.py
test/: test_evaluate_mcts_chess_node.py  test_evaluation.py  test_inference_server.py  test_mcts.py  test_mcts_chess_agent.py  test_policy_mcts.py
